--- a/.gitignore
+++ b/.gitignore
@@ -31,7 +31,7 @@ yarn-error.log*
 
 # env files (can opt-in for commiting if needed)
 .env*
-zis-config.template.env
+.zendesk-resources
 
 # vercel
 .vercel
