--- a/vercel.json
+++ b/vercel.json
@@ -2,20 +2,16 @@
   "buildCommand": "pnpm run build",
   "env": {
     "ZENDESK_SUBDOMAIN": {
-      "description": "Your Zendesk subdomain (e.g., company in company.zendesk.com)",
-      "required": true
+      "description": "Your Zendesk subdomain (e.g., company in company.zendesk.com)"
     },
-    "ZENDESK_ADMIN_EMAIL": {
-      "description": "Zendesk admin email address",
-      "required": true
+    "ZENDESK_API_USER": {
+      "description": "Zendesk admin email address"
     },
     "ZENDESK_API_TOKEN": {
-      "description": "Zendesk API token",
-      "required": true
+      "description": "Zendesk API token"
     },
-    "INTEGRATION_NAME": {
-      "description": "Name for the ZIS integration (lowercase letters, numbers, hyphens, and underscores only)",
-      "required": true
+    "INKEEP_API_KEY": {
+      "description": "Inkeep API key"
     }
   }
 } 
