--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "private": true,
   "scripts": {
     "dev": "next dev --turbopack",
-    "build": "next build",
-    "zis": "bash ./scripts/setup-zis.sh",
+    "build": "pnpm run telemetry && next build",
+    "telemetry": "npx tsx scripts/telemetry.ts",
     "start": "next start",
     "lint": "next lint"
   },
@@ -13,18 +13,23 @@
     "@ai-sdk/openai": "^0.0.70",
     "@t3-oss/env-nextjs": "^0.11.1",
     "ai": "^3.4.33",
+    "dotenv": "^16.4.5",
     "next": "15.0.1",
+    "node-fetch": "^3.3.2",
     "node-zendesk": "^5.0.13",
     "react": "19.0.0-rc-69d4b800-20241021",
     "react-dom": "19.0.0-rc-69d4b800-20241021",
+    "undici": "^6.6.2",
     "zod": "^3.23.8"
   },
   "devDependencies": {
     "@types/node": "^20",
+    "@types/node-fetch": "^2.6.11",
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "eslint": "^8",
     "eslint-config-next": "15.0.1",
+    "tsx": "^4.7.1",
     "typescript": "^5"
   }
 }
